--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -1984,6 +1984,34 @@
             ]
         },
         {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "Separate 1depTime date and time (we already have the date, we just want to see the time). Do the same for 2depTime, 1arrTime and 2arrTime."
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "''' # Extract time component from 1depTime column\n",
+                "useful_features_data['1depTimeOnly'] = useful_features_data['1depTime'].str.split('T').str[1]\n",
+                "# Displaying the DataFrame with the new column\n",
+                "print(useful_features_data[['1depTime', '1depTimeOnly']].head()) '''"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "useful_features_data.head()"
+            ]
+        },
+        {
             "cell_type": "code",
             "execution_count": 147,
             "metadata": {},
@@ -2104,9 +2132,9 @@
             ],
             "source": [
                 "# Extract time component from segmentsDepartureTimeRaw column\n",
-                "data_from_db['segmentsDepartureTime'] = data_from_db['segmentsDepartureTimeRaw'].str.split('T').str[1]\n",
+                "# data_from_db['segmentsDepartureTime'] = data_from_db['segmentsDepartureTimeRaw'].str.split('T').str[1]\n",
                 "# Displaying the DataFrame with the new column\n",
-                "print(data_from_db[['segmentsDepartureTimeRaw', 'segmentsDepartureTime']].head())"
+                "# print(data_from_db[['segmentsDepartureTimeRaw', 'segmentsDepartureTime']].head())"
             ]
         },
         {
@@ -2167,14 +2195,14 @@
             ],
             "source": [
                 "# Splitting the segmentsDepartureTimeRaw column by '||' to separate segments\n",
-                "segments = data_from_db['segmentsDepartureTimeRaw'].str.split('\\\\|\\\\|')\n",
+                "# segments = data_from_db['segmentsDepartureTimeRaw'].str.split('\\\\|\\\\|')\n",
                 "# Iterating over each row and printing the departure times for each segment for only the first 5 rows\n",
-                "for i, row in enumerate(segments[:5]):  # Limiting to first 5 rows\n",
-                "    print(f\"Departure times for row {i+1}:\")\n",
-                "    for j, segment in enumerate(row):\n",
-                "        departure_time = segment.split('T')[1]\n",
-                "        print(f\"Segment {j+1}: {departure_time}\")\n",
-                "    print()  # Empty line for separation between rows"
+                "# for i, row in enumerate(segments[:5]):  # Limiting to first 5 rows\n",
+                "#     print(f\"Departure times for row {i+1}:\")\n",
+                "#     for j, segment in enumerate(row):\n",
+                "#        departure_time = segment.split('T')[1]\n",
+                "#        print(f\"Segment {j+1}: {departure_time}\")\n",
+                "#     print()  # Empty line for separation between rows"
             ]
         },
         {
@@ -2209,7 +2237,7 @@
                 }
             ],
             "source": [
-                "import re\n",
+                "''' import re\n",
                 "# Splitting the segmentsDepartureTimeRaw column by '||' to separate segments\n",
                 "segments = data_from_db['segmentsDepartureTimeRaw'].str.split('\\\\|\\\\|')\n",
                 "# Limiting the processing to the first 5 rows\n",
@@ -2222,7 +2250,7 @@
                 "        # Extracting the time component and removing timezone offset\n",
                 "        departure_time = re.search(r'T(\\d{2}:\\d{2}:\\d{2})', segment).group(1)\n",
                 "        print(f\"Segment {j+1}: {departure_time}\")\n",
-                "    print()  # Empty line for separation between rows"
+                "    print()  # Empty line for separation between rows '''"
             ]
         },
         {
@@ -2252,7 +2280,7 @@
                 }
             ],
             "source": [
-                "# To store times into different columns\n",
+                "''' # To store times into different columns\n",
                 "import re\n",
                 "# Assuming df is your DataFrame containing the dataset\n",
                 "# Splitting the segmentsDepartureTimeRaw column by '||' to separate segments\n",
@@ -2273,7 +2301,7 @@
                 "# Create a new column in the DataFrame to store the departure times\n",
                 "data_from_db['departure_times'] = departure_times_list\n",
                 "# Display the DataFrame with the new column\n",
-                "print(data_from_db[['segmentsDepartureTimeRaw', 'departure_times']])"
+                "print(data_from_db[['segmentsDepartureTimeRaw', 'departure_times']]) '''"
             ]
         },
         {
