--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -9766,6 +9766,15 @@
         },
         {
             "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Convert travelDuration to numerical"
+            ]
+        },
+        {
+            "cell_type": "code",
             "execution_count": 174,
             "metadata": {},
             "outputs": [
@@ -9875,23 +9884,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# isBasicEconomy, isRefundable, isNonStop -> check how useful they are\n",
-                "# check if travelDuration or totalTravelDistance have a higher impact on flight price: distance could make the price higher instead of duration\n",
-                "# totalTravelDistance is already numerical: don't have to convert it\n",
-                "# segmentsArrivalAirportCode: check relevance\n",
-                "# segmentsEquipmentDescription: check if useful\n",
-                "# find out what are the categories in segmentsCabinCode\n",
                 "# daysBetweenDates/seasons: in streamlit app fragen, when would you like to travel - which period? (to have cheaper flights)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 178,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "# baseFare: if we only want to predict the ticket price\n",
-                "# totalFare: taxes and so on depends on the area they are flying from and to - !"
             ]
         },
         {
