--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -12569,9 +12569,7 @@
                 "    'criterion' :['squared_error', 'absolute_error'] # 'friedman_mse', 'poisson', reduce parameters to reduce fit time?\n",
                 "}\n",
                 "\n",
-                "grid_random = RandomizedSearchCV(model, param_grid, cv = 5, n_iter=100, n_jobs = -1, random_state=42)\n",
-                "\n",
-                "print(grid_random)'''"
+                "grid_random = RandomizedSearchCV(model, param_grid, cv = 5, n_iter=100, n_jobs = -1, random_state=42)'''\n"
             ]
         },
         {
